assets/src/scss/base/_base.scss
@use "../abstracts/variables"  as vars;
@use "../abstracts/mixins" as mixins;

html {
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-size: vars.$font-size-root; // 62.5% = 10px base
}

body {
  font-size: vars.$font-size-default; // 62.5% = 10px base
  font-family: "Lato", serif;
  color: vars.$black;
  background-color: vars.$white;
}

a,
a:hover,
a:focus,
a:active {
  color: inherit;
  text-decoration: none;
}

*, *:hover, *:focus {
  outline: 0;
}

section {
  overflow: hidden;
}

.image_bg {
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}


h1 {
  @include mixins.heading-style(vars.$font-size-display-sm, 1.4, vars.$weight-bold, vars.$black);

  @include mixins.lg-screen {

    @include mixins.heading-style(vars.$font-size-title, 8.4rem, vars.$weight-bold, vars.$black);
  }
}

h2 {
  @include mixins.heading-style(vars.$font-size-m, 1.2, vars.$weight-regular, vars.$black);

  @include mixins.lg-screen {

    @include mixins.heading-style(vars.$font-size-lg, 2rem, vars.$weight-regular, vars.$black);
  }
}

.transition, %transition {
  transition: all 0.3s ease-in-out;
}

.container {
  width: 100%;
  max-width: 100%;
}

@include mixins.ipad-air-screen {
  .container {
    width: 100%;
    max-width: 100%;
    padding: 0 3vw;
  }

  .left_space .container {
    padding-left: 3vw;
    padding-right: 0;
  }
}

@include mixins.lg-screen {
  .container {
    width: 100%;
    max-width: 100%;
    padding: 0 5vw;
  }

  .left_space .container {
    padding-left: 5vw;
    padding-right: 0;
  }
}

@include mixins.xl-screen {
  .container {
    padding: 0 7vw;
  }

  .left_space .container {
    padding-left: 7vw;
    padding-right: 0;
  }

  .small_container {
    max-width: 1280px;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
  }
}

@include mixins.big-screen {
  .container {
    padding: 0 10vw;
  }

  .left_space .container {
    padding-left: 10vw;
    padding-right: 0;
  }
}

.image_bg {
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover;
}

section {
  position: relative;
}

.site-content {
  margin-top: 118px;

  @include mixins.max-sm-screen {
    margin-top: 75px;
  }

  @include mixins.max-ipad-pro-screen {
    margin-top: 80px;

    @include mixins.ipad-air-screen {
      margin-top: 118px;
    }
  }
}

.title_section {
  @include mixins.heading-style(vars.$font-size-xl, 1.2, vars.$weight-bold, vars.$black);

  @include mixins.ipad-air-screen {
    font-size: vars.$font-size-title;
  }
}

.banner_title {
  @include mixins.heading-style(80px, 1.1, vars.$weight-bold, vars.$white);
}

.sub_title,
.sub_title_section {
  @include mixins.heading-style(vars.$font-size-lg, 1.2, vars.$weight-bold, vars.$black);

  @include mixins.ipad-air-screen {
    font-size: vars.$font-size-xxl;
  }
}

.title {
  @include mixins.heading-style(vars.$font-size-lg, 1.2, vars.$weight-bold, vars.$black);

  @include mixins.ipad-air-screen {
    font-size: vars.$font-size-display-sm;
  }
}

.description,
.small_title {
  @include mixins.heading-style(vars.$font-size-lg, 1.2, vars.$weight-bold, vars.$black);
}

.primary_color {
  color: vars.$primary;
}

.copy_account_number {
  cursor: pointer;

  &:hover {
    color: rgba(vars.$primary, 0.85);
    text-decoration: underline;
  }
}

.copy-tooltip {
  margin: 0 1rem;
  color: vars.$primary;
}


// Skip link styling
.skip-link {
  position: absolute;
  top: -50px;
  left: 50%;
  transform: translateX(-50%);
  background: vars.$primary;
  color: vars.$white;
  padding: 10px 15px;
  font-size: 16px;
  text-decoration: none;
  border-radius: 4px;
  z-index: 1000;
  transition: top 0.3s ease-in-out;

  &:focus {
    top: 10px; // Make it visible when focused
    outline: 2px solid vars.$white;
  }
}

// Main content wrapper
#primary {
  margin-top: 20px;
}


main {
  min-height: 100vh;
}

.single {
  h1 {
    line-height: 1.1;
  }
}

.youtube_video {
  position: relative;
  width: 100%;
  height: 100%;
  margin: 0 auto;
  overflow: hidden;

  @include mixins.flexbox(row, center, center);

  .youtube-play {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    justify-content: center;
    background: rgba(0, 0, 0, 0.7);
    border: none;
    color: white;
    width: 57px;
    height: 57px;
    font-size: 2em;
    border-radius: 50%;
    padding: 10px;
    z-index: 999;
  }

}

